--- a/Youtube/package.json
+++ b/Youtube/package.json
@@ -14,9 +14,10 @@
     "@emotion/styled": "^11.13.5",
     "@mui/icons-material": "^6.1.10",
     "@mui/material": "^6.1.10",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1",
-    "react-router-dom": "^7.0.2"
+    "react": "19.0.0-rc.1",
+    "react-dom": "19.0.0-rc.1",
+    "react-router-dom": "^7.0.2",
+    "axios": "^1.7.9"
   },
   "devDependencies": {
     "@eslint/js": "^9.15.0",
