--- a/Youtube_Backend/package.json
+++ b/Youtube_Backend/package.json
@@ -2,6 +2,7 @@
   "name": "youtube_backend",
   "version": "1.0.0",
   "description": "Starting the Backend",
+  "type": "module",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
@@ -10,7 +11,9 @@
   "author": "Masoom",
   "license": "ISC",
   "dependencies": {
+    "dotenv": "^16.4.7",
     "express": "^4.21.2",
+    "mongodb": "^6.12.0",
     "mongoose": "^8.9.1",
     "nodemon": "^3.1.9"
   }
